--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 捷克-431.4KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-247.3KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-4.40MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.52MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.66MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.31MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
+  - {name: 🇭🇰 香港-2.77MB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.86MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.17MB/s(Youtube:不良林), server: 129.227.201.234, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 129.227.201.234}}
+  - {name: 🇯🇵 日本-5.34MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.09MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2, server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 捷克-431.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 捷克-431.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 捷克-431.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 捷克-431.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 捷克-431.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 捷克-431.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 捷克-431.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-247.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
