--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
-  - {name: 🇭🇰 香港-2.77MB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.86MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.17MB/s(Youtube:不良林), server: 129.227.201.234, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 129.227.201.234}}
-  - {name: 🇯🇵 日本-5.34MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.09MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2, server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
