--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.03MB/s(Youtube:不良林), server: 173.82.212.149, port: 24552, type: vmess, uuid: 601d7be0-d6cc-4e98-d721-b83b7da6fec5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.18MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-9.57MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.10MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇯🇵 日本-19.56MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-337.0KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 9c289eb1-59b1-49ff-9c80-9a3c879c654e, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-337.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
